--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <img src="lewis-shrimp.png">
+<a href="taptempo.html">Shrimp tapper...</a>
 </body>
 </html>
