--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
+<body style="font-family: monospace;"><center>
+<h1>Menu</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <img src="lewis-shrimp.png">
 <a href="taptempo.html">Shrimp tapper...</a>
-</body>
+  <a href="prawntempora.html">Prawn Tempora</a>
+  <a href="chickenkeyev.html">Prawn Tempora</a>
+</center></body>
 </html>
