--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html><meta charset="UTF-8">
 <body style="font-family: monospace;"><center>
-<h1>Menu</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<img src="lewis-shrimp.png">
-<a href="taptempo.html">Shrimp tapper...</a>
-  <a href="prawntempora.html">Prawn Tempora</a>
-  <a href="chickenkeyev.html">Prawn Tempora</a>
+<h1>Crumb Douglas' Audio Boulangerie</h1>
+<p>Menu:</p>
+<img src="lewis-shrimp.png"><br>
+<a href="taptempo.html">Shrimp tapper...</a><br>
+  <a href="prawntempora.html">Prawn Tempora</a><br>
+  <a href="chickenkeyev.html">Prawn Tempora</a><br>
+  &#10013;
+  &#x271D;
 </center></body>
 </html>
