--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html><meta charset="UTF-8">
+<html><style<meta charset="UTF-8">
 <body style="font-family: monospace;"><center>
 <h1>Crumb Douglas' Audio Boulangerie</h1>
-<p>Menu:</p>
+<h2>Menu:</h2>
 <img src="lewis-shrimp.png"><br>
-<a href="taptempo.html">Shrimp tapper...</a><br>
+<!--<a href="taptempo.html">Shrimp tapper...</a><br>-->
   <a href="prawntempora.html">Prawn Tempora</a><br>
-  <a href="chickenkeyev.html">Prawn Tempora</a><br>
+  <a href="chickenkeyev.html">Chicken Keyev</a><br>
   &#10013;
-  &#x271D;
+  &#9786; &#9788;
 </center></body>
 </html>
