added prawn & chicken

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<img src="lewis-shrimp.png">
-<a href="taptempo.html">Shrimp tapper...</a>
-</body>
+<html><head><title>Prawn Tempora</title><meta charset="UTF-8">
+<style></style></head>
+<body style="font-family: monospace;"><center>
+<h1>Crumb Douglas' Audio Boulangerie</h1>
+<h2>Menu:</h2>
+<img src="lewis-shrimp.png"><br>
+<!--<a href="taptempo.html">Shrimp tapper...</a><br>-->
+  <a href="prawntempora.html">Prawn Tempora</a><br>
+  <a href="chickenkeyev.html">Chicken Keyev</a><br>
+  &#10013;
+  &#9786; &#9788;
+</center></body>
 </html>
