--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html><head><title>Prawn Tempora</title><meta charset="UTF-8">
-<style></style></head>
+<style>{object-fit:</style></head>
 <body style="font-family: monospace;"><center>
-<h1>Crumb Douglas' Audio Boulangerie</h1>
+<h1></h1>
 <h2>Menu:</h2>
 <img src="lewis-shrimp.png"><br>
 <!--<a href="taptempo.html">Shrimp tapper...</a><br>-->
@@ -10,5 +10,9 @@
   <a href="chickenkeyev.html">Chicken Keyev</a><br>
   &#10013;<br>
   &#9786; &#9788;
-</center></body>
+  
+
+</center>
+
+</body>
 </html>
