--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ background-clip: }
 </div>
 
 <!--<img src="crumbjewels.png" style="width:434px;height:399px;">-->
-<br><br><a class="downloadlink" href="Wear Life like a Beautiful Dress (320kpbs).zip">download the mp3s @ 320kbps</a>
+<!--<br><br><a class="downloadlink" href="Wear Life like a Beautiful Dress (320kpbs).zip">download the mp3s @ 320kbps</a>-->
 <br><br><br><br>
 <img src="wearlifewindows3.png" style="height:auto;width:450px;margin-left:20px;"><br>
 <!--<img src="SANDBOY.png" style="height:auto;width:500px;">-->
@@ -474,9 +474,9 @@ background-clip: }
 </center>
 
 
-<div class="trmenu"><span>menu</span>
+<!--<div class="trmenu"><span>menu</span>
 <div class="trmenu-content"><a href="">prawn tempo-ra</a><br><a href="">chicken key-ev</a></div>
-</div>
+</div>-->
 
 </body>
 </html>
