--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ background-clip: }
 </div>
 
 <!--<img src="crumbjewels.png" style="width:434px;height:399px;">-->
-<!--<br><br><a class="downloadlink" href="Wear Life like a Beautiful Dress (320kpbs).zip">download the mp3s @ 320kbps</a>-->
+<br><br><a class="downloadlink" href="https://www.mediafire.com/file/qmnks7te1cakt51/Wear_Life_like_a_Beautiful_Dress_%2528320kpbs%2529.zip/file">download the mp3s @ 320kbps</a>
 <br><br><br><br>
 <img src="wearlifewindows3.png" style="height:auto;width:450px;margin-left:20px;"><br>
 <!--<img src="SANDBOY.png" style="height:auto;width:500px;">-->
