--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ background-clip: }
 <br><br><br>
 <span style="font-family: redaction-bold; font-weight: 500; font-size: 40px; " class="mainalbtitle bgclipanim">Wear Life Like a Beautiful Dress</span><br>
 
-<img src="man.png" style="height:500px;width:500px;">
+<img src="man.png" style="height:500px;width:500px;" title="thx maria!">
 
 <div id="jquery_jplayer_2" class="jp-jplayer"></div>
 <div id="jp_container_2" class="jp-audio" role="application" aria-label="media player">
