--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@ background-clip: }
         #jp_container_2 > span, #jp_container_2 > div > span {display: block; height: 1.5px; overflow: hidden; -webkit-background-clip: content-box; background-clip: content-box;}
         #jp_container_2 > div > span {margin-top: 1em;}
         
+        
 }
+@media (orientation:portrait) and (max-width: 520px) {.mainalbtitle {font-size:6vw ; }}
 
 </style>
 
