--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ background-clip: }
 <br><br><br><br>
 <img src="wearlifewindows3.png" id="wearlifewindows"><br>
 
-<br><br><br>thanks lovers<!--to maria, jenny, george, lorraine, and mum-->
+<br><br><br>thanks my loves<!--to maria, jenny, george, lorraine, and mum-->
 <!--<br>
 -------
 <br>I tried to sleep but all I could hear was the deafening sound of a sky full of stars crackling with undischarged energy. A thousand radio stations jostling for attention on the airwaves of the cosmos. Desperate for my unwitting brain to dial in and let forth the messy translations from the pink muscle in my mouth. My tongue and my lips and all my limbs charged with the communications of the voiceless beyond.-->
