--- a/index.html
+++ b/index.html
@@ -129,12 +129,9 @@ position:absolute; right: 0; cursor: pointer; top: 0;
 
 .lyricpanelinner {text-align: left; margin-top: 1ch; margin-bottom: 1ch;}
 .lyricpanelinner {  line-height: 1.25; color: black;            
-  -webkit-background-clip: text;
-  background-clip: text;        
-  background-image: linear-gradient(to right, lightpink , orange, gold, plum, deepskyblue, hotpink, lightpink);
-  background-size: 300% 200%;
-  animation-name: bgflaganim;
-  animation-duration: 15s; animation-direction: normal; animation-iteration-count: infinite; animation-timing-function: linear;}
+  -webkit-background-clip: text; background-clip: text; background-image: linear-gradient(to right, lightpink , orange, gold, plum, deepskyblue, hotpink, lightpink);
+  background-size: 200% 200%;
+  animation-name: bgflaganim; animation-duration: 15s; animation-direction: normal; animation-iteration-count: infinite; animation-timing-function: linear;}
 /*
 .lyric-active, .jp-lyrics-button:hover > .lyricopensignal {
   background-color: #ccc; transform: scaleY(-1); 
@@ -190,16 +187,13 @@ div.jp-type-playlist div.jp-playlist a {
   color: #1a1a1a;
   text-decoration: none; }
 
-div.jp-type-playlist div.jp-playlist a:hover {
-  opacity: 0.7;}
+div.jp-type-playlist div.jp-playlist a:hover {opacity: 0.7;}
 
 div.jp-type-playlist div.jp-playlist a.jp-playlist-current { 
   font-weight: bold;
   list-style-type: none;}
   
-div.jp-type-playlist div.jp-playlist a.jp-playlist-current:hover {
-  /*background: #F67012;
-  color: #F9E8D8;*/}
+div.jp-type-playlist div.jp-playlist a.jp-playlist-current:hover {/*background: #F67012; color: #F9E8D8;*/}
 
 div.jp-type-playlist div.jp-playlist span.jp-has-time {
   float: right;
@@ -253,12 +247,11 @@ a:hover {opacity: 0.5;}
     
         .bgclipanim { 
           color:transparent;            
-  -webkit-background-clip: text;
-  background-clip: text; 
+  -webkit-background-clip: text; background-clip: text; 
   }
         .bgfadanim, .bgclipanim { 
   background-image: linear-gradient(to right, lightpink , orange, gold, plum, deepskyblue, hotpink, lightpink);
-  background-size: 300% 200%;
+  background-size: 200% 200%;
   animation-name: bgflaganim;
   animation-duration: 15s; animation-direction: normal; animation-iteration-count: infinite; animation-timing-function: linear;}
         .smally {background-size: 1000% 200%;}
