--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ a:hover {opacity: 0.5;}
   
 .jp-state-playing .jp-play .buttpause{visibility: visible;}
 
-.jp-controls_hold {position: relative; display: block; height: 3rem; width: 10rem; margin-bottom: 2rem;}
+.jp-controls_hold {position: relative; display: block; height: 3rem; width: 10rem; margin-bottom: 2rem; overflow: hidden;}
 .jp-controls {position: relative; display: block; height: 3rem; width: 20rem; margin-bottom: 2rem; left: -5rem;}
         
         .nextprevanim {}
@@ -297,7 +297,7 @@ a:hover {opacity: 0.5;}
 .prv1 {position: absolute; top: 0; right: 0; border-top: 1.5em solid oldlace; border-bottom: 1.5em solid oldlace; border-right: 2em solid transparent;}
 .prv2 {right: 2em;}
 .whiteoutprv {position: absolute; border-color: oldlace; border-width: 0.75rem 1rem 0.75rem 0; border-style: solid; width: 5em; height: 3em; left: 0; top:-1.5em;}
-.whiteoutsides {position: absolute; top:0; left: 0; border-color: oldlace; border-width: 0rem 5rem ; border-style: solid; width: 10rem; height: 3rem;}
+.whiteoutsides {position: absolute; top:0; left: 0; border-color: oldlace; border-width: 0rem 5rem ; border-style: solid; width: 10rem; height: 3rem; display: none;}
 .buttskiphover {position: absolute; background-color: oldlace; opacity:0; height: 3em; width: 5em; top:0; left:0; 
 background-clip: }
 
