--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="jquery.jplayer.js"></script>
 <script type="text/javascript" src="jplayer.playlist2020ii.js"></script>
-
+<!--
 <script type="text/javascript">
 //<![CDATA[
 $(document).ready(function(){
@@ -99,9 +99,9 @@ if (lyricfirstclick == true) {
   }
 }
 </script>
+-->
 
-
-
+<!--
 
 
 <style>
@@ -337,11 +337,12 @@ background-clip: }
 @media (orientation:portrait) and (max-width: 520px) {.mainalbtitle {font-size:6vw ; }}
 
 </style>
-
-
+-->
+<style>#forward{font-size: 40vw; text-align: center; margin-top: 20vh;}</style>
 </head>
 <body>
-
+<div id="forward"><a href="https://ed-dickinson.github.io/">></a></div>
+<!--
 <center>
 <div class="bodybgpads bgpadl"></div>
 <div class="bodybgpads bgpadr"></div>
@@ -387,10 +388,12 @@ background-clip: }
 <br><br><br><br>
 <img src="wearlifewindows3.png" id="wearlifewindows"><br>
 
-<br><br><br>thanks my loves<!--to maria, jenny, george, lorraine, and mum-->
+<br><br><br>thanks my lovesto maria, jenny, george, lorraine, and mum
+-->
 <!--<br>
 -------
 <br>I tried to sleep but all I could hear was the deafening sound of a sky full of stars crackling with undischarged energy. A thousand radio stations jostling for attention on the airwaves of the cosmos. Desperate for my unwitting brain to dial in and let forth the messy translations from the pink muscle in my mouth. My tongue and my lips and all my limbs charged with the communications of the voiceless beyond.-->
+<!--
 <div class="lyric-pre-writer lyricpanelinner" id="" style="width:48ch; text-align:left;">
 
 
@@ -401,6 +404,7 @@ background-clip: }
 <font size="3ch" class="transform: rotate(20deg); position: relative; display: inline-block;">†</font>
 
 </center>
+-->
 
 
 <!--<div class="trmenu"><span>menu</span>
