--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -145,7 +145,7 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
 
     This is my attempt to express the interplaying joy and sorrow that defines my  experience— in the surest terms that i am able.<br><br>
     
-<div id="album-photo"><img id="livin-album-photo" src="/Users/edwarddickinson/Desktop/vlcsnap-2021-04-16-10h01m17s598.jpg"></div>
+<div id="album-photo"><img id="livin-album-photo" src="assets/vlcsnap-598.jpg"></div>
 
 
         </div>
