--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="Crumb Douglas">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="" id="tabicon">
+<link rel="icon" href="assets/transpixelbutton-pause.png" id="tabicon">
 <style>
 body {margin: 0; background-color: black;}
 
