--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title></title>
+<title>living Yourself</title>
 <meta charset="UTF-8">
 <meta name="keywords" content="">
 <meta name="description" content="">
