--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -92,6 +92,8 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
 
 /* SVGS */
 
+#svg-track-overlay-box, #svg-track-underlay-box {position: absolute; bottom: 0; left: 0;}
+
 #svg-track-overlay-box {z-index: 20;}
 #svg-track-overlay-box .svg-track-overlay {cursor: pointer; fill: black; opacity: 0; z-index: 20;}
 #svg-track-overlay-box .svg-track-overlay:hover {fill: black; opacity: 0.4;}
