--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -121,7 +121,7 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
     30% {top: 100%; left: 81%;}
     40% {top: 100%; left: 100%;}
 }
-#extra-swirls {top: 100%; left: 81%;  background-color: palevioletred; height: 5%; width: 5%; animation: swirlsAnim 5s step-end infinite, extrasLngAnim 0.5s linear infinite; }
+#extra-swirls {top: 100%; left: 81%;  background-color: palevioletred; height: 5%; width: 5%; animation: swirlsAnim 20s step-end infinite, extrasLngAnim 2s linear infinite; }
 
 @keyframes extrasAnim {
     0%, 15%,100% {opacity: 0; } 
@@ -144,11 +144,11 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
 
 #extra-sun {top: 65%; left: 97%; background-color: gold; height: 10%; width: 9%;  animation: extrasAnim 18s linear infinite 5s; }
 
-#extra-heart {top: 77%; left: 39%; background-color: tomato; height: 6%; width: 6%;  animation: extrasAnim 20s linear infinite 12s; }
+#extra-heart {top: 77%; left: 39%; background-color: tomato; height: 6%; width: 6%;  animation: extrasAnim 30s linear infinite 12s; }
 
 #extra-bum {top: 77%; left: 94%; background-color: peachpuff; height: 8%; width: 6%;  animation: extrasAnim 17s linear infinite 16s; }
 
-#extra-bug {top: 22%; left: 76%; background-color: plum; height: 5%; width: 5%;  animation: extrasAnim 19s linear infinite 10s; }
+#extra-bug {top: 22%; left: 76%; background-color: plum; height: 5%; width: 5%;  animation: extrasAnim 29s linear infinite 10s; }
 
 #extra-leaf {top: 26%; left:26%; background-color: palegreen; height: 4%; width: 5%;  animation: extrasAnim 15s linear infinite 3s; }
 
@@ -190,7 +190,8 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
 
 /* CERAMIC MAN */
 
-#ceramic-man {background-image: url(assets/man.png); width: 50%; height: 50%; position: absolute;  background-position: center; background-repeat: no-repeat; top: 25%; left: 25%; cursor: pointer; z-index: 25; overflow: visible; background-size:;}
+#ceramic-man {background-image: url(assets/man.png); width: 50%; height: 50%; position: absolute;  background-position: center; background-repeat: no-repeat; top: 25%; left: 25%; cursor: pointer; z-index: 25; overflow: visible; }
+@media screen and (min-width: 500px) {#ceramic-man {background-size:52%;}}
 
 #ceramic-shimmer {position: absolute; top: 0;   border-radius: 50%; left: 0; background-image: linear-gradient(135deg, rgba(255,255,255,0) 40%,rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 60%); background-size: 300%; background-position:0%; animation-name: shimmeranim; animation-duration: 5s; animation-direction: normal; animation-iteration-count: infinite; animation-timing-function: linear; z-index: 22;}
 
