--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -277,6 +277,8 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
 
     This is my attempt to express the interplaying joy and sorrow that defines my  experience— in the surest terms that i am able.<br><br>
     
+    <div style="text-align: right;"><a href="https://crumbdouglas.bandcamp.com/album/living-yourself" style="color:white;">(download on bandcamp)</a></div><br>
+    
 <div id="album-photo"><a href="https://www.youtube.com/watch?v=2_qhqSqSbqk" target="_blank" rel="noreferrer noopener"><img id="livin-album-photo" src="assets/vlcsnap-598.jpg"></a></div>
 
 
