--- a/livingyourself/index.html
+++ b/livingyourself/index.html
@@ -216,7 +216,7 @@ height: calc(1000% / 11); top: calc(50% / 11); position: absolute;}
     
     #lyrics-button {position: absolute; bottom: 0px; right: 0px; height: calc(44% - 5px); top: calc(20vw - 5px); padding: 6px 0px 0px 10px; line-height:30px;  font-size: 16px; letter-spacing: 8px; border-radius: 0px 0px 6px 0px; width: 30%; background-image: url(assets/info-blk.png); background-color: white; background-repeat: no-repeat; background-size: 66%; background-position: center;}
     
-    #lyrics-drawer {border-radius: 7px;  font-size: 60%; position: fixed; height: calc(100% - 36vw - 10px); top:; border-top: 0; border-top-left-radius: 0; border-top-right-radius: 0; }
+    #lyrics-drawer {border-radius: 7px;  font-size: 60%; position: absolute; height: calc(100% - 36vw - 10px); top:; border-top: 0; border-top-left-radius: 0; border-top-right-radius: 0; }
 
 
     #lyrics-drawer.closed { top: calc(36vw - 100% + 36vw + 10px);height: calc(100% - 36vw - 24px);}
