--- a/chickenkeyev.html
+++ b/chickenkeyev.html
@@ -27,6 +27,7 @@ body {font-family: monospace;}
   transition: opacity .2s;
   border: 1px solid black;
   border-radius: 11px;
+  z-index: 1;
 }
 
 /* Mouse-over effects */
@@ -58,16 +59,32 @@ body {font-family: monospace;}
 
 #readoutnote {font-size: 30pt;}
 
+#chicken {transform: rotate(0deg); z-index: -1; transition: 0s;}
+
+.bodybgpads {position: fixed; top: -10vh; height: 120vh; width: calc(60vw - 26ch); min-width: 0; z-index: -200; opacity: 0.5;} 
+.bgpadl {left: -10vw; background-image: linear-gradient(to left, white, oldlace); } /*antiquewhite, blanchedalmond, bisque, PapayaWhip*/
+.bgpadr {right: -10vw; background-image: linear-gradient(to right, white, oldlace); }
+
+#inner-chicken-clicker1, #inner-chicken-clicker2 {width: 50%; height: 100%; position: absolute;}
+#inner-chicken-clicker1 {left: 0;}
+#inner-chicken-clicker2 {right: 0;}
+
 </style>
 </head>
 <body>
+<div class="bodybgpads bgpadl"></div>
+<div class="bodybgpads bgpadr"></div>
 <center>
 <!--Chicken Decides Everything--><br>
-<div style="background-image: url(assets/lewis-chicken.png); height: 200px; width: 200px; background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>
+<div id="chicken" style="background-image: url(assets/lewis-chicken.png); height: 200px; width: 200px; background-size: 100%; background-repeat: no-repeat; background-position: center; ">
+    <div id="inner-chicken-clicker1"></div>
+    <div id="inner-chicken-clicker2"></div>
+</div>
 
 <br>
 <div class="slidecontainer">
-  <input type="range" min="1" max="12" value="1" class="slider" id="myRange">
+  <input type="range" min="1" max="12" value="1" class="slider" id="myRange" oninput="chordChange()">
+<!--  -->
 </div>
 <span id="readout" style="color:red;">&nbsp;<span id="readoutnote">C</span><span id="readoutsharp" style="position:relative;top:-2ch;">&nbsp;</span></span>
 <br>maj
@@ -99,14 +116,27 @@ body {font-family: monospace;}
 var slider = document.getElementById("myRange");
 var output = document.getElementById("readout");
 //readout.innerHTML = slider.value; // Display the default slider value
-let chromatic = ['O','C','C#','D','D#','E','F','F#','G','G#','A','A#','B','C','C#','D','D#','E','F','F#','G','G#','A','A#','B'];
+var chromatic = ['O','C','C#','D','D#','E','F','F#','G','G#','A','A#','B','C','C#','D','D#','E','F','F#','G','G#','A','A#','B'];
 var I = 1;
 var x = 1;
 var vi = 7;
 
-slider.oninput = function() {
+//for rotating the chicken
+var rota = 0;
+var rota2 = 0;
+var chicki = document.getElementById("readout");
 
-I = Number(this.value);
+//slider.oninput = function () {
+function chordChange() {
+
+//for rotating the chicken
+//rota2 = ((this.value - 1) * 1) / 5;
+rota2 = ((slider.value - 1) * 1) / 5;
+rota = "rotate(" + (rota2) + "deg)";
+document.getElementById('chicken').style.transform = rota;
+
+//I = Number(this.value);
+I = Number(slider.value);
 ii = I + 2;
 iii = I + 4;
 IV = I + 5;
@@ -227,5 +257,23 @@ if (chromatic[ii].length == 1) {
   
   
   }
+  
+//slider.addEventListener('input', chordChange());
+  
+  
+document.getElementById('inner-chicken-clicker1').addEventListener('click', function() {
+    slider.focus(); 
+    slider.value -= 1; 
+    console.log(slider.value); 
+    chordChange();
+    });
+    
+document.getElementById('inner-chicken-clicker2').addEventListener('click', function() {
+    slider.readOnly = false; 
+    slider.focus(); 
+    slider.value = Number(slider.value) + 1; 
+    console.log(slider.value); 
+    chordChange();
+    });
 </script>
 </html>
